some code correction and filepath corrections

--- a/3_codes/Inspection_labor_hour.ipynb
+++ b/3_codes/Inspection_labor_hour.ipynb
@@ -287,14 +287,14 @@
     }
    ],
    "source": [
-    "csv_path_laborhour = Path(\"../2.Resource/maximo_labor_hour/Maximo_download.csv\")\n",
+    "csv_path_laborhour = Path(\"../2_resource/maximo_labor_hour/Maximo_download.csv\")\n",
     "labor_hour = pd.read_csv(csv_path_laborhour,  sep=\",\", encoding='cp1252')\n",
     "labor_hour"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "59bd8ccc",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "[19950 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4a8fcb47",
    "metadata": {},
    "outputs": [
@@ -541,7 +541,7 @@
        "10       25360.67"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,127 +554,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0da70ebd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Inspection Annual Cost   $ 4709770.0\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>labor_hour</th>\n",
-       "      <th>$ cost</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>route</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>403.0</td>\n",
-       "      <td>60450.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>566.0</td>\n",
-       "      <td>84825.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1172.0</td>\n",
-       "      <td>175875.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1136.0</td>\n",
-       "      <td>170430.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>459.0</td>\n",
-       "      <td>68913.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3435.0</td>\n",
-       "      <td>515242.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>4857.0</td>\n",
-       "      <td>728618.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8624.0</td>\n",
-       "      <td>1293632.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10745.0</td>\n",
-       "      <td>1611785.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       labor_hour     $ cost\n",
-       "route                       \n",
-       "1           403.0    60450.0\n",
-       "2           566.0    84825.0\n",
-       "3          1172.0   175875.0\n",
-       "4          1136.0   170430.0\n",
-       "5           459.0    68913.0\n",
-       "6          3435.0   515242.0\n",
-       "7          4857.0   728618.0\n",
-       "8          8624.0  1293632.0\n",
-       "9         10745.0  1611785.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "avg_cost_per_hour = 150\n",
+    "\n",
     "labor_hour = labor_hour[(labor_hour[\"labor_hour\"] < 23360.67)]\n",
-    "labor_hour[\"$ cost\"] = labor_hour[\"labor_hour\"]*150\n",
-    "print(\"Total Inspection Annual Cost   $\",labor_hour.sum()[\"$ cost\"].round(2))\n",
+    "labor_hour = labor_hour[\"$_cost\"] = labor_hour[\"labor_hour\"]*avg_cost_per_hour\n",
+    "\n",
+    "print(\"Total Inspection Annual Cost   $\",labor_hour.sum()[\"$_cost\"].round(2))\n",
     "labor_hour.round(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd67c15",
+   "id": "52d6a358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labor_hour.to_csv(\"../4_output_and_visualization/labor_hour.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca4f3eea",
    "metadata": {},
    "outputs": [],
    "source": []
