edit to flow_share_calc for code correction

--- a/3_codes/flow_share_calc.ipynb
+++ b/3_codes/flow_share_calc.ipynb
@@ -586,12 +586,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3141648055.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3141648055.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  district_flow_route9.rename(columns={'sewersheds': 'Input_Name'}, inplace=True)\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3141648055.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3141648055.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -787,7 +787,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\970437722.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\970437722.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1720,19 +1720,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\2195371622.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_1_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\2195371622.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_1_Flow.Flow_length  = (Route_1_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\2195371622.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2131,25 +2131,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1700200034.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1700200034.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1700200034.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow.Flow_length  = (Route_3_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1700200034.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2302,7 +2302,7 @@
     "Route_4_Flow_transfer = Route_4_Flow_transfer [[\"Flow\"]]\n",
     "Route_4_Flow_transfer = Route_4_Flow_transfer.reset_index()\n",
     "output_Length = Route_Data.loc[(Route_Data[\"route\"]==5)].reset_index()['route_length'][0]\n",
-    "# Route_4_Flow_transfer[\"Flow_length\"] = 18894\n",
+    "Route_4_Flow_transfer[\"Flow_length\"] = output_Length\n",
     "Route_4_Flow.set_index\n",
     "Route_4_Flow.round(2)\n",
     "# Route_4_Flow_transfer "
@@ -2326,25 +2326,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3275738047.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3275738047.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3275738047.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow.Flow_length  = (Route_5_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\3275738047.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2496,25 +2496,25 @@
        "      <th>Dulles</th>\n",
        "      <td>6</td>\n",
        "      <td>0.81</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>18894.0</td>\n",
+       "      <td>15304.14</td>\n",
+       "      <td>2.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Fairfax</th>\n",
        "      <td>6</td>\n",
        "      <td>5.16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>18894.0</td>\n",
+       "      <td>97493.04</td>\n",
+       "      <td>18.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Loudoun</th>\n",
        "      <td>6</td>\n",
        "      <td>13.14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>18894.0</td>\n",
+       "      <td>248267.16</td>\n",
+       "      <td>47.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WSSC</th>\n",
@@ -2522,7 +2522,7 @@
        "      <td>11.99</td>\n",
        "      <td>13902.0</td>\n",
        "      <td>166684.98</td>\n",
-       "      <td>100.0</td>\n",
+       "      <td>31.58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2531,10 +2531,10 @@
       "text/plain": [
        "         route   Flow  Flow_length  Flow_X_length  %_Share\n",
        "user                                                      \n",
-       "Dulles       6   0.81          0.0           0.00      0.0\n",
-       "Fairfax      6   5.16          0.0           0.00      0.0\n",
-       "Loudoun      6  13.14          0.0           0.00      0.0\n",
-       "WSSC         6  11.99      13902.0      166684.98    100.0"
+       "Dulles       6   0.81      18894.0       15304.14     2.90\n",
+       "Fairfax      6   5.16      18894.0       97493.04    18.47\n",
+       "Loudoun      6  13.14      18894.0      248267.16    47.04\n",
+       "WSSC         6  11.99      13902.0      166684.98    31.58"
       ]
      },
      "execution_count": 28,
@@ -2588,19 +2588,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1833457463.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_7_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1833457463.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_7_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_32712\\1833457463.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3683,9 +3683,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <th>0.81000</th>\n",
-       "      <th>0.0</th>\n",
-       "      <th>0.00000</th>\n",
-       "      <th>0.000000</th>\n",
+       "      <th>18894.0</th>\n",
+       "      <th>15304.14000</th>\n",
+       "      <th>2.899888</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3719,9 +3719,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <th>5.16000</th>\n",
-       "      <th>0.0</th>\n",
-       "      <th>0.00000</th>\n",
-       "      <th>0.000000</th>\n",
+       "      <th>18894.0</th>\n",
+       "      <th>97493.04000</th>\n",
+       "      <th>18.473362</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3776,9 +3776,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <th>13.14000</th>\n",
-       "      <th>0.0</th>\n",
-       "      <th>0.00000</th>\n",
-       "      <th>0.000000</th>\n",
+       "      <th>18894.0</th>\n",
+       "      <th>248267.16000</th>\n",
+       "      <th>47.042630</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -3859,7 +3859,7 @@
        "      <th>11.99000</th>\n",
        "      <th>13902.0</th>\n",
        "      <th>166684.98000</th>\n",
-       "      <th>100.000000</th>\n",
+       "      <th>31.584120</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -3882,7 +3882,7 @@
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: []\n",
-       "Index: [(District, 9, 17.09, 90000.0, 106550.0, 7.232869591558123), (Dulles, 2, 0.81, 1700.0, 1377.0, 0.4681957547871486), (Dulles, 9, 0.81, 26859.0, 21755.79, 1.4768352128702422), (Dulles, 8, 0.81, 12183.0, 9868.230000000001, 0.9927987949385665), (Dulles, 6, 0.81, 0.0, 0.0, 0.0), (Dulles, 4, 0.81, 14814.0, 11999.34, 3.0303309938718765), (Fairfax, 9, 17.259999999999998, 26859.0, 463586.33999999997, 31.469352807580712), (Fairfax, 8, 17.259999999999998, 66893.0, 546134.38, 54.94415455846906), (Fairfax, 7, 9.31, 21543.0, 200565.33000000002, 89.77820636451301), (Fairfax, 6, 5.159999999999999, 0.0, 0.0, 0.0), (Fairfax, 4, 5.159999999999999, 33769.0, 76523.06, 19.325246260537433), (Fairfax, 3, 3.6199999999999997, 30020.0, 54336.2, 90.46538138127015), (Fairfax, 2, 5.14, 45575.0, 234255.49999999997, 79.64955020736447), (Fairfax, 1, 5.14, 15950.0, 17880.61, 100.0), (Loudoun, 4, 13.139999999999999, 37764.0, 193039.81999999998, 48.75056041394345), (Loudoun, 9, 13.139999999999999, 26859.0, 352927.25999999995, 23.957549008783925), (Loudoun, 8, 13.139999999999999, 12183.0, 160084.62, 16.105402673447855), (Loudoun, 6, 13.139999999999999, 0.0, 0.0, 0.0), (Loudoun, 3, 0.9978699529999999, 17217.0, 5726.775660267, 9.534618618729858), (Loudoun, 2, 12.879999999999999, 78896.0, 58475.24999999999, 19.88225403784837), (NPS, 9, 0.03, 26859.0, 805.77, 0.054697600476675635), (NPS, 8, 0.03, 14057.0, 421.71, 0.04242637026230062), (Navy, 9, 0.07, 26859.0, 1880.13, 0.1276277344455765), (Navy, 8, 0.07, 1437.0, 100.59, 0.010119913174183252), (Vienna, 9, 1.06, 26859.0, 28470.54, 1.9326485501758726), (Vienna, 8, 1.06, 50710.0, 53752.600000000006, 5.407810367696618), (Vienna, 7, 1.06, 21543.0, 22835.58, 10.22179363548698), (WSSC, 8, 18.509999999999998, 39026.0, 223618.72999999998, 22.49728732201141), (WSSC, 6, 11.989999999999998, 13902.0, 166684.97999999998, 100.0), (WSSC, 5, 11.989999999999998, 28114.0, 168543.43, 100.0), (WSSC, 9, 18.509999999999998, 26859.0, 497160.08999999997, 33.748419494108866)]"
+       "Index: [(District, 9, 17.09, 90000.0, 106550.0, 7.232869591558123), (Dulles, 2, 0.81, 1700.0, 1377.0, 0.4681957547871486), (Dulles, 9, 0.81, 26859.0, 21755.79, 1.4768352128702422), (Dulles, 8, 0.81, 12183.0, 9868.230000000001, 0.9927987949385665), (Dulles, 6, 0.81, 18894.0, 15304.140000000001, 2.8998881514428105), (Dulles, 4, 0.81, 14814.0, 11999.34, 3.0303309938718765), (Fairfax, 9, 17.259999999999998, 26859.0, 463586.33999999997, 31.469352807580712), (Fairfax, 8, 17.259999999999998, 66893.0, 546134.38, 54.94415455846906), (Fairfax, 7, 9.31, 21543.0, 200565.33000000002, 89.77820636451301), (Fairfax, 6, 5.159999999999999, 18894.0, 97493.03999999998, 18.47336155733938), (Fairfax, 4, 5.159999999999999, 33769.0, 76523.06, 19.325246260537433), (Fairfax, 3, 3.6199999999999997, 30020.0, 54336.2, 90.46538138127015), (Fairfax, 2, 5.14, 45575.0, 234255.49999999997, 79.64955020736447), (Fairfax, 1, 5.14, 15950.0, 17880.61, 100.0), (Loudoun, 4, 13.139999999999999, 37764.0, 193039.81999999998, 48.75056041394345), (Loudoun, 9, 13.139999999999999, 26859.0, 352927.25999999995, 23.957549008783925), (Loudoun, 8, 13.139999999999999, 12183.0, 160084.62, 16.105402673447855), (Loudoun, 6, 13.139999999999999, 18894.0, 248267.15999999997, 47.042630012294474), (Loudoun, 3, 0.9978699529999999, 17217.0, 5726.775660267, 9.534618618729858), (Loudoun, 2, 12.879999999999999, 78896.0, 58475.24999999999, 19.88225403784837), (NPS, 9, 0.03, 26859.0, 805.77, 0.054697600476675635), (NPS, 8, 0.03, 14057.0, 421.71, 0.04242637026230062), (Navy, 9, 0.07, 26859.0, 1880.13, 0.1276277344455765), (Navy, 8, 0.07, 1437.0, 100.59, 0.010119913174183252), (Vienna, 9, 1.06, 26859.0, 28470.54, 1.9326485501758726), (Vienna, 8, 1.06, 50710.0, 53752.600000000006, 5.407810367696618), (Vienna, 7, 1.06, 21543.0, 22835.58, 10.22179363548698), (WSSC, 8, 18.509999999999998, 39026.0, 223618.72999999998, 22.49728732201141), (WSSC, 6, 11.989999999999998, 13902.0, 166684.97999999998, 31.584120278923333), (WSSC, 5, 11.989999999999998, 28114.0, 168543.43, 100.0), (WSSC, 9, 18.509999999999998, 26859.0, 497160.08999999997, 33.748419494108866)]"
       ]
      },
      "execution_count": 35,
