final commit Eyasu

--- a/3_codes/flow_share_calc.ipynb
+++ b/3_codes/flow_share_calc.ipynb
@@ -586,12 +586,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3141648055.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3141648055.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  district_flow_route9.rename(columns={'sewersheds': 'Input_Name'}, inplace=True)\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3141648055.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3141648055.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -787,7 +787,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\970437722.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\970437722.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1720,19 +1720,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\2195371622.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_1_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\2195371622.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_1_Flow.Flow_length  = (Route_1_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\2195371622.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\2195371622.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2131,25 +2131,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1700200034.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1700200034.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1700200034.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_3_Flow.Flow_length  = (Route_3_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1700200034.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1700200034.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2326,25 +2326,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3275738047.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3275738047.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3275738047.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_5_Flow.Flow_length  = (Route_5_Flow.Flow_length ).astype(\"float\")\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\3275738047.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\3275738047.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2588,19 +2588,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1833457463.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_7_Flow['Flow_X_length'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1833457463.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Route_7_Flow['%_Share'] = \"\"\n",
-      "C:\\Users\\schad\\AppData\\Local\\Temp\\ipykernel_17016\\1833457463.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\eyasu\\AppData\\Local\\Temp\\ipykernel_11096\\1833457463.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
